--- a/pm/app/templates/Register/default.latte
+++ b/pm/app/templates/Register/default.latte
@@ -6,4 +6,4 @@
 
 {control registerForm}
 
-<p class="info">Registrovat se můžete také <a n:href="Auth:openid">přihlášením k vašemu openID</a> účtu.</p>
+<p class="info">Registrovat se můžete také <a href="{plink Auth:openid}">přihlášením k vašemu openID</a> účtu.</p>
