--- a/pm/app/templates/Content/default.latte
+++ b/pm/app/templates/Content/default.latte
@@ -1,15 +1,5 @@
-{block #content}
+{block content}
 
 <h2 n:block="title">Obsahový manager</h2>
 
 {control selectSectionForm}
-
-{control contentForm}
-
-{snippet content section}
-	{ifset $content}
-		{!$content|texy}
-	{else}
-		<p>Zde se zobrazí náhled právě editované obsahové sekce.</p>
-	{/ifset}
-{/snippet}
