--- a/pm/app/templates/@layout.latte
+++ b/pm/app/templates/@layout.latte
@@ -23,7 +23,7 @@
 			<strong>výroba reklamy</strong>
 		</header>
 
-		<hr>
+		<hr id="bg">
 
 		<nav id="menu"><strong class="hide">menu:</strong>{control menu}</nav>
 
@@ -60,10 +60,35 @@
 		<hr>
 
 		<footer>
-			<p>patička</p>
+			<p>patička | <a href="https://github.com/iiic/pm-studio">fork me on github</a> | multihosting <a href="http://ovh.cz">OVH</a></p>
 		</footer>
 
 		{control packedJs 'jquery.js', 'jquery.ajaxform.js', 'jquery.nette.js', 'netteForms.js', 'my.scripts.js'}
-
+		{ifset $_GET['lol']}
+			<script>
+				// pěkná animace posunu pozadí objektu, ale náročná jak sviňa,
+				//lepší by to teoreticky mělo být na Win7 s některým prohlížečem,
+				//který podporuje hardwarovou akceleraci webu, ale tohle nemohu vyzkoušet.
+				var scrollSpeed = 1; 		// Speed in milliseconds
+				var step = 1; 				// How many pixels to move per step
+				var current = 0;			// The current pixel row
+				var imageHeight = 2247;		// Background image width
+				var headerHeight = 1280;		// How wide the header is.
+				//The pixel row where to start a new loop
+				var restartPosition = -(imageHeight - headerHeight);
+				function scrollBg(){
+					//Go to next pixel row.
+					current -= step;
+					//If at the end of the image, then go to the top.
+					if (current == restartPosition){
+						current = 0;
+					}
+					//Set the CSS of the header.
+					$('#bg').css("background-position","58% "+current+"px");
+				}
+				//Calls the scrolling function repeatedly
+				var init = setInterval("scrollBg()", scrollSpeed);
+			</script>
+		{/ifset}
 	</body>
 </html>
